--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -369,7 +369,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "height, width = \n"
+    "height, width = img.shape[:2]\n",
+    "mat = np.array((height, width))\n",
+    "\n"
    ]
   },
   {
