--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -17,15 +17,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link = 'images/Road.png'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load image in grayscale format\n",
-    "road = cv2.imread('images/Road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "road = cv2.imread(link, cv2.IMREAD_GRAYSCALE)\n",
     "building = cv2.imread('images/Building.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "road_color = cv2.imread('images/Road.png', cv2.IMREAD_COLOR)\n",
+    "road_color = cv2.imread(link, cv2.IMREAD_COLOR)\n",
     "building_color = cv2.imread('images/Building.png', cv2.IMREAD_COLOR)"
    ]
   },
@@ -87,11 +96,11 @@
     "# rescaling road\n",
     "\n",
     "basewidth = 100\n",
-    "road_img = Image.open('Images/Road.png')\n",
+    "road_img = Image.open(link)\n",
     "wpercent = (basewidth/float(road_img.size[0]))\n",
     "hsize = int((float(road_img.size[1])*float(wpercent)))\n",
     "resc_road = road_img.resize((basewidth,hsize), Image.ANTIALIAS)\n",
-    "resc_road.save('rescale_road.png', quality = 95)\n"
+    "resc_road.save('images/rescale_road.png', quality = 95)\n"
    ]
   },
   {
@@ -117,7 +126,7 @@
     "\n",
     "import matplotlib.cm as cm\n",
     "\n",
-    "gray_road = cv2.imread( 'Images/Road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "gray_road = cv2.imread( link, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "hist_np, bins = np.histogram( gray_road.ravel(),256,[0,256])\n",
     "\n",
@@ -160,7 +169,7 @@
     }
    ],
    "source": [
-    "img = cv2.imread( 'Images/road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( link, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "def update(omega=10, sigma_color=20, sigma_space=50):\n",
     "    img_bilat = cv2.bilateralFilter( img, omega, sigma_color, sigma_space)\n",
@@ -178,7 +187,7 @@
    "outputs": [],
    "source": [
     "threshVal = 70\n",
-    "img = cv2.imread( 'Images/road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( link, cv2.IMREAD_GRAYSCALE)\n",
     "gray_road = cv2.bilateralFilter( img, 9, 80, 80)\n",
     "ret, thresh1 = cv2.threshold( gray_road, threshVal, 255, cv2.THRESH_BINARY)\n",
     "ret, thresh2 = cv2.threshold( gray_road, threshVal, 255, cv2.THRESH_BINARY_INV)\n",
@@ -203,7 +212,7 @@
     "# Canny\n",
     "\n",
     "#img = cv2.imread( 'Images/Road.png', cv2.IMREAD_GRAYSCALE)\n",
-    "img = cv2.imread( 'Images/Building.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( link, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "def update( lo_thresh=80, hi_thresh=180, sobel_size=3):\n",
     "    img_canny = cv2.Canny( img, lo_thresh, hi_thresh, apertureSize=sobel_size, L2gradient=True)\n",
@@ -228,7 +237,7 @@
     "minLineLength = 1\n",
     "maxLineGap = 20\n",
     "sobel_size = 3\n",
-    "img = cv2.imread( 'Images/rescale_road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( 'images/rescale_road.png', cv2.IMREAD_GRAYSCALE)\n",
     "img_canny = cv2.Canny(img, 90, 150 , apertureSize=sobel_size, L2gradient=True)\n",
     "lines = cv2.HoughLinesP(img_canny,1,np.pi/180,100,minLineLength,maxLineGap)\n",
     "for x1,y1,x2,y2 in lines[0]:\n",
@@ -249,7 +258,7 @@
    "source": [
     "#Hough lines 2\n",
     "\n",
-    "img = cv2.imread( 'Images/rescale_road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( 'images/rescale_road.png', cv2.IMREAD_GRAYSCALE)\n",
     "edges = cv2.Canny(img, 90, 150 , apertureSize=7, L2gradient=True)\n",
     "\n",
     "lines = cv2.HoughLines(edges,1,np.pi/180,2)\n",
@@ -342,7 +351,7 @@
     "minLineLength = 1\n",
     "maxLineGap = 20\n",
     "sobel_size = 3\n",
-    "img = cv2.imread( 'Images/rescale_road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( 'images/rescale_road.png', cv2.IMREAD_GRAYSCALE)\n",
     "img_canny = cv2.Canny(thresh5, 90, 150 , apertureSize=sobel_size, L2gradient=True)\n",
     "\n",
     "lines = cv2.HoughLinesP(img_canny,1,np.pi/180,100,minLineLength,maxLineGap)\n",
@@ -377,7 +386,7 @@
     "\n",
     "#img = cv2.imread( 'Images/Pattern_inspection2.png', cv2.IMREAD_GRAYSCALE)\n",
     "#img = cv2.imread( 'Images/Building.png', cv2.IMREAD_GRAYSCALE)\n",
-    "img = cv2.imread( 'Images/Road.png', cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread( link, cv2.IMREAD_GRAYSCALE)\n",
     "#img = cv2.imread( 'Images/1_HQ00020.png', cv2.IMREAD_GRAYSCALE)\n",
     "#img = cv2.imread( 'Images/image.000078.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
@@ -502,7 +511,7 @@
    ],
    "source": [
     "def update( minLineLength=80, maxLineGap=10):\n",
-    "    img = cv2.imread( 'Images/Road.png', cv2.IMREAD_COLOR)\n",
+    "    img = cv2.imread( link, cv2.IMREAD_COLOR)\n",
     "    b,g,r = cv2.split(img)\n",
     "    img_rgb = cv2.merge([r,g,b]) \n",
     "    height, width = img.shape[:2]\n",
@@ -566,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
