--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
     "\n",
     "imgReduc.astype(int)\n",
     "\n",
-    "print(type(imgReduc))\n",
+    "print(type(edges))\n",
     "\n",
     "print(max(imgReduc[:, 30]), max(edges[:, 30]))\n",
     "\n",
