some super changes

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,10 +11,10 @@
     "The first part of the Computer Vision project is devoted to the development of an application for image processing and detection/extraction of lines in several picture datasets. Based on classical methods, it is known nowadays that line detection is an important building block of numerous applications like 3D scene analysis. \n",
     "\n",
     "This report explains how it is managed to : \n",
-    "  -  read and process image from the disk memory (2.1) ;\n",
-    "  -  extract edge points from an image using Canny's methods (2.2) ;\n",
-    "  -  detecte the support lines with the Hough classical method (2.3) ;\n",
-    "  -  make edge points classification (2.4). \n",
+    "  -  read and process image from the disk memory [(2.1)](#2.1-Task-1-:-Image/Video-processing-application) ;\n",
+    "  -  extract edge points from an image using Canny's methods [(2.2)](#2.2-Task-2-:-Edge-points-extraction) ;\n",
+    "  -  detecte the support lines with the Hough classical method [(2.3)](#2.3-Task-3-:-Line-(segment)-detection) ;\n",
+    "  -  make edge points classification [(2.4)](#2.4-Task-4-:-Edge-points-classification). \n",
     "  "
    ]
   },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
