--- a/Part2/Codes/ellipseBoundingBox.ipynb
+++ b/Part2/Codes/ellipseBoundingBox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,18 @@
     "                ( 'Original image', 'Bounding box'),\n",
     "                cmap_tuple=( cm.gray, cm.gray))\n",
     "#cv2.imwrite('img.png', img)\n",
-    "f.close()"
+    "f.close()\n",
+    "\n",
+    "\n",
+    "g = open(\"file.txt\",\"w+\")\n",
+    "xc_box = ((x_max+x_min)/2)/width\n",
+    "yc_box = ((y_max+y_min)/2)/height\n",
+    "wid_box = (x_max-x_min)/width\n",
+    "hei_box = (y_max-y_min)/height\n",
+    "g.write(\"0 \" + str(xc_box) + \" \" + str(yc_box) + \" \" + str(wid_box) + \" \" + str(hei_box))\n",
+    "g.close() \n",
+    "\n",
+    "\n"
    ]
   },
   {
