changes to create text file containing path to all data images

--- a/Part2/Codes/makeBoundingBoxes.ipynb
+++ b/Part2/Codes/makeBoundingBoxes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -60,15 +60,29 @@
    ],
    "source": [
     "##Paths of image and corresponding annotation files:\n",
+    "code_path = '../'\n",
     "image_file_path = '../images/'\n",
     "annotation_file_path = '../annotations/'\n",
     "\n",
-    "##Destination file path of masks:\n",
+    "##Destination directory path of masks:\n",
     "bb_file_path = '../bounding_boxes/'\n",
     "\n",
-    "##Create file for the bounding boxes text files if it does not already exists:\n",
+    "##Destination directory\n",
+    "all_im_file_path = '../all_im/'\n",
+    "\n",
+    "##Create directory for the bounding boxes text files if it does not already exists:\n",
     "if not os.path.isdir(bb_file_path):\n",
     "        os.makedirs(bb_file_path)\n",
+    "\n",
+    "        \n",
+    "##Create directory for the file containing all image paths\n",
+    "if not os.path.isdir(all_im_file_path):\n",
+    "        os.makedirs(all_im_file_path)\n",
+    "\n",
+    "all_im_fil = all_im_file_path + 'all_im'\n",
+    "        \n",
+    "##Create text file containing paths of all images of the data set        \n",
+    "h = open(all_im_fil,\"w+\")        \n",
     "\n",
     "##Loop over all Soccer Ellipse images and process them:\n",
     "for img_name in os.listdir(image_file_path):\n",
@@ -76,6 +90,11 @@
     "        image_path = image_file_path + img_name\n",
     "        annotation_path = annotation_file_path + img_name[:len(img_name)-3] + 'txt'\n",
     "        bb_path = bb_file_path + img_name[:len(img_name)-3] + 'txt'\n",
+    "        \n",
+    "        \n",
+    "        ##Write path to image data into text file containing paths of all images\n",
+    "        h.write(image_path + \"\\n\")\n",
+    "        \n",
     "        \n",
     "        ##Import image and characteristics:\n",
     "        original_img = cv2.imread(image_path, cv2.IMREAD_COLOR)\n",
@@ -165,51 +184,8 @@
     "        \n",
     "          \n",
     "\n",
-    "    \n",
+    "h.close()\n",
     "print(\"All BB text files created\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
-   "source": [
-    "number_elps\n",
-    "image_path\n",
-    "bb_list\n",
-    "type(current_line)\n",
-    "current_line\n",
-    "if current_line == ['\\n']:\n",
-    "    print('ok')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../images/elps_soccer_823.png'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_path"
    ]
   },
   {
