--- a/Part2/Codes/makeBoundingBoxes.ipynb
+++ b/Part2/Codes/makeBoundingBoxes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,9 @@
     "            \n",
     "            nb_coord = len(current_line) \n",
     "            coord_list = []\n",
-    "\n",
+    "            \n",
+    "            #print(image_path)\n",
+    "            \n",
     "            for i in range(nb_coord):\n",
     "                coord_list.append(float(current_line[i]))\n",
     "\n",
@@ -187,6 +189,27 @@
     "h.close()\n",
     "print(\"All BB text files created\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
