changes for path

--- a/Part2/report.ipynb
+++ b/Part2/report.ipynb
@@ -72,9 +72,9 @@
     "import matplotlib.cm as cm             # Image color map \n",
     "import Codes.tools                     # A few helpers to plot multiple images\n",
     "import pandas as pd\n",
-    "from Codes.sudoku_lines import sudoku_lines_eval, roc_curve_sudoku\n",
-    "from Codes.road_lines import road_lines_eval, roc_curve_road\n",
-    "from Codes.soccer_lines import soccer_lines_eval, roc_curve_soccer"
+    "from Codes.Part1/sudoku_lines import sudoku_lines_eval, roc_curve_sudoku\n",
+    "from Codes.Part1/road_lines import road_lines_eval, roc_curve_road\n",
+    "from Codes.Part1/soccer_lines import soccer_lines_eval, roc_curve_soccer"
    ]
   },
   {
