--- a/Part2/Codes/Preprocessing/real_prepro.ipynb
+++ b/Part2/Codes/Preprocessing/real_prepro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,10 @@
     "\n",
     "\n",
     "median_kernel = 5\n",
+    "ksize=5\n",
+    "if ksize % 2 == 0:\n",
+    "    ksize -= 1\n",
+    "kernel = np.ones( ( ksize, ksize), np.uint8)\n",
     "c = 15\n",
     "ksize = 75\n",
     "\n",
@@ -106,10 +110,11 @@
     "        img = cv2.imread(image_path)\n",
     "        \n",
     "        img_blur = cv2.medianBlur(img, median_kernel)\n",
-    "        img_contrast = apply_contrast(img_blur, c)\n",
-    "        img_unif = local_normalize_image(img_contrast, ksize)\n",
+    "        img_erd = cv2.erode( img_blur, kernel, iterations = 1)\n",
+    "        #img_contrast = apply_contrast(img_blur, c)\n",
+    "        #img_unif = local_normalize_image(img_contrast, ksize)\n",
     "        \n",
-    "        cv2.imwrite(output_img_path, img_unif)\n",
+    "        cv2.imwrite(output_img_path, img_erd)\n",
     "    \n",
     "\n",
     "print(\"All images preprocessed and stored\")  "
