--- a/Part2/report.ipynb
+++ b/Part2/report.ipynb
@@ -296,22 +296,48 @@
     "\n",
     "For the soccer images, we decide to use the network Yolo to classify the ellipses on the soccer images. You Only Look Once (YOLO) is a pretrained classifier for object detection using a bounding box. We have used the configuration YOLOv3 with some modifications so that YOLO only detects the ellipses of the soccer field in a reasonable time according to the capacity of our GPU.\n",
     "\n",
-    "Our dataset have been randomly split into the training set, the validation set and the test set that contains 70%, 20% and 10% of the soccer images, respectively."
+    "Our dataset have been randomly split into the training set, the validation set and the test set that contains 70%, 20% and 10% of the soccer images, respectively. The training and validation sets with the corresponding positions of the ellipses in a Darknet format are used to train the classifier and compute new weights. After the training session, the classifier is used with the new obtained weights to classify the images on the test set. The analyse of the performances of the classification will be focus on the results of the test set images."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2.4 :  performance assessment of the ellipse matching module"
+    "## Task 2.4 :  performance assessment of the ellipse matching module\n",
+    "\n",
+    "### Soccer \n",
+    "\n",
+    "First, let's focus on the classification task. The results show that, on the test set, % of the ellipses have been well detected and classified as ellipse. Moreover, by looking at the images where the ellipse classification was not made, Only a small part of the ellipse is visible on the image. \n",
+    "\n",
+    "The second results show that, on the test set, % of the detected ellipses are real ellipses. In fact, Only one detected ellipse on the test set is classified wrongly but by looking at the picture, the detected ellipse is clearly an ellipse an annotation should have been made. So, the ellipse classifications of our model are all correct on the test set.\n",
+    "\n",
+    "Now, let's focus on the matching of the bounding boxes. To evaluate our model, the Intersection over Union (IoU) is used. This metric divide the area of the intersection of the bounding boxe of the annotations and the bounding boxe of the detected ellipse by the union of this 2 bounding boxes. The closer the value is to 1, the more similar the boxes. The result obtained for the mean values of the IoU between the bounding boxes of the test set is equal to 0.87, which is an excellent result."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of detected ellipses: 0.9702970297029703\n",
+      "Proportion of real ellipses from detected ellipses 0.98989898989899\n",
+      "mean IOU: 0.8798217002636028\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Codes.IOU_soccer import IOU_soccer\n",
+    "\n",
+    "prop_detec, prop_well_class,  files_bad, mean_IOUs, list_IOU = IOU_soccer()\n",
+    "\n",
+    "print(\"Proportion of detected ellipses: {}\".format(prop_detec))\n",
+    "print(\"Proportion of real ellipses from detected ellipses {}\".format(prop_well_class))\n",
+    "print(\"mean IOU: {}\".format(mean_IOUs))"
+   ]
   },
   {
    "cell_type": "code",
