--- a/Part2/report.ipynb
+++ b/Part2/report.ipynb
@@ -36,7 +36,7 @@
     "During the first part of the project, the goal was to find efficient ways to extract and detect lines in five types of images : Building, PCB, Soccer, Road and Sudoku. For this purpose, some preprocessing methods were applied to the images (GaussianBlur...), then one applied edges detection method such as Canny or AdaptiveThreshold and, finally, one could increase the quality of the detections using postprocessing methods as dilation. By the end of this first part of the projet, one was able to classify edge pixels as being part of a line or not. This will be the basis of the performance assessment. \n",
     "\n",
     "Indeed, one wants to assess the performance of line segment detection developed before. To do so, a database of annotated lines images (sudoku, soccer and road) are provided. One will evaluate the performance as follows : \n",
-    "  -  Based on confusion matrix definition, one will compare the line segment detection module with the annotations. For the edge pixels assumed to be part of a line segment, one will check if they belong actually to an annotated lines. If so, it will count for a true positive pixel. If not, it will count for a false positive pixels. In the same idea, a true negative pixel is a non-edge pixel that is actually annotated as being a non-edge pixel. Conversly, a false negative pixel is a non-edge pixel that is annotated to belong to a line. In order to have relative results, those number of true/false positive/negative pixels will be divided by the total number of edge pixels computed during the first part of the project. \n",
+    "  -  Based on confusion matrix definition, one will compare the line segment detection module with the annotations. For the edge pixels assumed to be part of a line segment, one will check if they belong actually to an annotated lines. If so, it will count for a true positive pixel. If not, it will count for a false positive pixels. In the same idea, a true negative pixel is a non-edge pixel that is actually annotated as being a non-edge pixel. Conversly, a false negative pixel is a non-edge pixel that is annotated to belong to a line. In order to have relative results, those number of true/false positive/negative pixels will be divided by the total number of classified edge pixels computed during the first part of the project. \n",
     "  -  Another qualitative way to assess the performance of line segment detection is to compare the detected lines at the Hough Line Transform output and the annotated lines. The goal will be to count the number of Hough lines that correspond to true lines. In order to do so, one will compare the number of pixels that belong to both a Hough Line and annotated lines. Thanks to this, it will be chosen if it actually represents the same line (with a tolerance parameter called alpha, tuned by hand for each different image types). This assessment method is less precised than the first one, but it gives a complementary evaluation. \n",
     "\n",
     "In order to get consistent results, the two methods are applied to the full image datasets for the three types of images. The edge detection methods developped during the first part of the project are assumed to be good if they give high percentage of true positive pixels and true negative pixels. The results are given below. It is not surprising to see that the sudoku images have the best results. It was actually the easiest type of images to process. For soccer and road images, the percentage of true positive pixels is lower. This is not so surprising. Indeed, during the first part of the project, one decided mainly to reject all the false lines that were detected by the method. This makes that lots of the true lines were also rejected. Therefore, if one looks at the percentage of true negative pixels, the percentages are way better in the case of soccer and road images. \n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +74,29 @@
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
-    "import tools\n",
     "\n",
-    "from Codes.Part1.sudoku_lines import sudoku_lines_eval, roc_curve_sudoku\n",
-    "from Codes.Part1.road_lines import road_lines_eval, roc_curve_road\n",
-    "from Codes.Part1.soccer_lines import soccer_lines_eval, roc_curve_soccer"
+    "from Codes.sudoku_lines import sudoku_lines_eval, roc_curve_sudoku\n",
+    "from Codes.road_lines import road_lines_eval, roc_curve_road\n",
+    "from Codes.soccer_lines import soccer_lines_eval, roc_curve_soccer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pourcent of true positive pixels =  82.97031171149565 %\n",
+      "Pourcent of false negative pixels =  17.029688288504357 %\n",
+      "Pourcent of true negative pixels =  58.42498717441534 %\n",
+      "Pourcent of false positive pixels =  41.575012825584636 %\n",
+      "57.80416945849964 % of the Hough lines are real lines\n"
+     ]
+    }
+   ],
    "source": [
     "dilation_parameter = 1\n",
     "\n",
@@ -108,9 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pourcent of true positive pixels =  58.27811128828579 %\n",
+      "Pourcent of false negative pixels =  41.721888711714186 %\n",
+      "Pourcent of true negative pixels =  88.0296583272244 %\n",
+      "Pourcent of false positive pixels =  11.970341672775563 %\n",
+      "28.213580228920826 % of the Hough lines are real lines\n"
+     ]
+    }
+   ],
    "source": [
     "dilation_parameter = 1\n",
     "\n",
@@ -133,9 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pourcent of true positive pixels =  15.217347377989555 %\n",
+      "Pourcent of false negative pixels =  84.78265262201043 %\n",
+      "Pourcent of true negative pixels =  98.95776108948853 %\n",
+      "Pourcent of false positive pixels =  1.0422389105114855 %\n",
+      "17.856298535780077 % of the Hough lines are real lines\n"
+     ]
+    }
+   ],
    "source": [
     "dilation_parameter = 1\n",
     "\n",
@@ -374,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
