--- a/Part2/report.ipynb
+++ b/Part2/report.ipynb
@@ -753,13 +753,14 @@
     "\n",
     "<center> Mean value over the test set with preprocessing </center>\n",
     "\n",
-    "Concerning the eye images, based on the prediction (which is actually a binary image representing the prdicted pupil), the parameters of the ellipse are computed as in TP3. They were compared with parameters computed from the groundtruth (annotations) thanks to the fitEllipse function. Based on this, the mean squared error for each parameter can be computed for all images of the test set. The following results were obtained :\n",
+    "Concerning the eye images, based on the prediction (which is actually a binary image representing the predicted pupil), the parameters of the ellipse are computed as in TP3. They were compared with parameters computed from the groundtruth (annotations) thanks to the fitEllipse function. Based on this, the mean absolute error for each parameter can be computed for all images of the test set. Computing the mean squared error is not suitable since when there is an error, it is never under the value of 1 (since it is a number of pixels). Therefore, squa\n",
+    "The following results were obtained :\n",
     "\n",
-    "$MSE_{xc} = 22$ pixels   \n",
-    "$MSE_{yc} = 17$ pixels  \n",
-    "$MSE_{a} = 24$ pixels  \n",
-    "$MSE_{b} = 9$ pixels  \n",
-    "$MSE_{theta} = 172$ degrees  \n",
+    "$MAE_{xc} = 1.37$ pixels   \n",
+    "$MAE_{yc} = 2.11$ pixels  \n",
+    "$MAE_{a} = 2.27$ pixels  \n",
+    "$MAE_{b} = 1.37$ pixels  \n",
+    "$MAE_{theta} = 2.17$ degrees  \n",
     "\n",
     "It is important to note that these results were only computed for images where the algorithm found an ellipse where there actually was an ellipse. Concerning the angle, since it is undefined when a and b are close to each other (becaue the ellipse reduces to a circle), this value is biased.  \n",
     "Concerning the preprocessing, compared to the raw images, it was noticed that it lead to better validation loss results during the learning. However, as predicted, using preprocessed images did not lead to better overall results (after evaluation of the prediction)."
@@ -807,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   },
   "mimetype": "text/x-python",
   "name": "python",
