--- a/Part2/report.ipynb
+++ b/Part2/report.ipynb
@@ -713,11 +713,11 @@
     "\n",
     "### Soccer images\n",
     "\n",
-    "First, let's focus on the classification task. The results show that, on the test set, % of the ellipses have been well detected and classified as ellipse. Moreover, by looking at the images where the ellipse classification was not made, Only a small part of the ellipse is visible on the image. \n",
+    "First, let's focus on the classification task. The results show that, on the test set, 97% of the ellipses have been well detected and classified as ellipse. Moreover, by looking at the images where the ellipse classification was not made, Only a small part of the ellipse is visible on the image. \n",
     "\n",
-    "The second results show that, on the test set, % of the detected ellipses are real ellipses. In fact, Only one detected ellipse on the test set is classified wrongly but by looking at the picture, the detected ellipse is clearly an ellipse an annotation should have been made. So, the ellipse classifications of our model are all correct on the test set.\n",
+    "The second results show that, on the test set, 99% of the detected ellipses are real ellipses. In fact, Only one detected ellipse on the test set is classified wrongly but by looking at the picture, the detected ellipse is clearly an ellipse an annotation should have been made. So, the ellipse classifications of our model are all correct on the test set.\n",
     "\n",
-    "Now, let's focus on the matching of the bounding boxes. To evaluate our model, the Intersection over Union (IoU) is used. This metric divide the area of the intersection of the bounding boxe of the annotations and the bounding boxe of the detected ellipse by the union of this 2 bounding boxes. The closer the value is to 1, the more similar the boxes. The result obtained for the mean values of the IoU between the bounding boxes of the test set is equal to 0.87, which is an excellent result.\n",
+    "Now, let's focus on the matching of the bounding boxes. To evaluate our model, the Intersection over Union (IoU) is used. This metric divide the area of the intersection of the bounding boxe of the annotations and the bounding boxe of the detected ellipse by the union of this 2 bounding boxes. The closer the value is to 1, the more similar the boxes. The result obtained for the mean values of the IoU between the bounding boxes of the test set is equal to 0.87, which is an excellent result, since we know that the common area of the two boxes decreases more than linearly when one box is shifted more or less diagonally (because we lose some area both in length and height).\n",
     "\n",
     "\n",
     "\n"
@@ -725,9 +725,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of detected ellipses: 0.9702970297029703\n",
+      "Proportion of real ellipses from detected ellipses 0.98989898989899\n",
+      "mean IOU: 0.8798217002636028\n"
+     ]
+    }
+   ],
    "source": [
     "prop_detec, prop_well_class,  files_bad, mean_IOUs, list_IOU = IOU_soccer()\n",
     "\n",
